Adding bare SDK image